--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,18 +1,32 @@
 security:
     encoders:
         App\Entity\User:
-            algorithm: auto    
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+            algorithm: bcrypt    
+    
     providers:
         users_in_memory: { memory: null }
+        
+        in_database:
+            entity:
+                class: App\Entity\User
+                property: username
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
             anonymous: true
-            lazy: true
-            provider: users_in_memory
+            provider: in_database
+
+            form_login:
+                login_path: account_login
+                check_path: account_login
+
+            logout:
+                path: account_logout
+                target: account_login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -25,3 +39,9 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/users, roles: ROLE_ADMIN }
+        - { path: ^/, roles: ROLE_USER }
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
