Unit tests implemented

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -28,9 +28,19 @@
         </include>
     </coverage>
 
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">src</directory>
+        </whitelist>
+    </filter>
+
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
+
+    <logging>
+        <log type="coverage-html" target="coverage"/>
+    </logging>
 
     <!-- Run `composer require symfony/panther` before enabling this extension -->
     <!--
