Voters for authorization and Php-cs-fixer utils

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,8 @@
 /phpunit.xml
 .phpunit.result.cache
 ###< phpunit/phpunit ###
-/coverage/
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
