--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^2.9",
         "fzaninotto/faker": "^1.9",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "phpmd/phpmd": "^2.10",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.2.*",
         "symfony/console": "5.2.*",
@@ -46,6 +47,8 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.6",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "phpstan/phpstan-symfony": "^0.12.38",
         "phpunit/phpunit": "^8.5",
         "symfony/browser-kit": "^5.2",
         "symfony/css-selector": "^5.2",
